// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InternalLink matches snapshot 1`] = `
.c1 {
  padding-right: 0.25rem;
  display: inline-block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c2 {
  position: relative;
  width: 2rem;
  min-width: 2rem;
  height: 2rem;
  min-height: 2rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c5 {
  object-fit: contain;
}

.c6 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4 {
  width: 1.25em;
  min-width: 1.25em;
  height: 1.25em;
  min-height: 1.25em;
}

.c0 {
  display: inline;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  text-decoration: underline;
  cursor: pointer;
  color: #0d24c4;
  overflow-wrap: break-word;
}

.c0 .c3 {
  filter: invert(21%) sepia(90%) saturate(3220%) hue-rotate(232deg) brightness(71%) contrast(127%);
  display: inline-block;
  vertical-align: text-top;
}

.c0:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%),0 0 0 0.3rem rgba(87, 87, 87, 100%);
}

.c0:visited {
  color: #081676;
}

.c0:visited .c3 {
  filter: invert(12%) sepia(79%) saturate(3172%) hue-rotate(231deg) brightness(82%) contrast(114%);
}

.c0:active {
  color: #081676;
  outline: 1px solid #081676;
}

.c0:active .c3 {
  filter: invert(12%) sepia(79%) saturate(3172%) hue-rotate(231deg) brightness(82%) contrast(114%);
}

.c0[disabled] {
  cursor: not-allowed;
  color: #808080;
}

.c0[disabled] .c3 {
  filter: invert(54%) sepia(0%) saturate(38%) hue-rotate(176deg) brightness(92%) contrast(91%);
}

@media (hover: hover) {
  .c0:hover,
  .c0:visited:hover {
    color: #0a1d9d;
    text-decoration: underline;
    text-decoration-thickness: 18%;
  }

  .c0:hover .c3,
  .c0:visited:hover .c3 {
    filter: invert(16%) sepia(72%) saturate(7176%) hue-rotate(239deg) brightness(61%) contrast(109%);
  }
}

<div>
  <a
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2 c3 c4"
      >
        <img
          alt=""
          class="c5"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953892/icons/hlxmejse3mcr4tqo6t8u.svg"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </span>
    </div>
    <span
      class="c6"
    >
      Content goes here
    </span>
  </a>
</div>
`;

exports[`InternalLink matches snapshot with loading spinner 1`] = `
.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

.c2 {
  --width: 1.25rem;
  --inner-width: calc(var(--width) / 10 * 8);
  --thickness: calc(var(--width) / 12);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--width);
  height: var(--width);
}

.c5 {
  width: var(--inner-width);
  height: var(--inner-width);
  border-radius: 50%;
  border: var(--thickness) solid;
  border-color: currentcolor currentcolor currentcolor transparent;
  animation: k0 1.2s linear infinite;
}

.c1 {
  padding-right: 0.25rem;
  display: inline-block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c3 {
  --width: 1.25em;
}

.c0 {
  display: inline;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  text-decoration: underline;
  cursor: pointer;
  color: #0d24c4;
  overflow-wrap: break-word;
}

.c0:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%),0 0 0 0.3rem rgba(87, 87, 87, 100%);
}

.c0:visited {
  color: #081676;
}

.c0:active {
  color: #081676;
  outline: 1px solid #081676;
}

.c0[disabled] {
  cursor: not-allowed;
  color: #808080;
}

@media (hover: hover) {
  .c0:hover,
  .c0:visited:hover {
    color: #0a1d9d;
    text-decoration: underline;
    text-decoration-thickness: 18%;
  }
}

@keyframes k0 {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

<div>
  <a
    class="c0"
    disabled=""
  >
    <div
      class="c1"
    >
      <span
        class="c2 c3"
      >
        <span
          class="c4"
        >
          Loading
        </span>
        <div
          class="c5"
        />
      </span>
    </div>
    <span
      class="c6"
    >
      Content goes here
    </span>
  </a>
</div>
`;
